Working on connecting display listing endpoint to frontend
